--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     }
     #map_panel {
         position: absolute;
-        bottom: 0px;
-        left: 0px;
+        bottom: 3px;
+        left: 3px;
         z-index: 10;
         border: 1px solid #777;
         background: white;
@@ -158,6 +158,7 @@ function add_segment(event) {
         icon: (track.length == 0 ? start_img : end_img)
         });
     google.maps.event.addListener(handle, 'drag', drag(track.length));
+    google.maps.event.addListener(handle, 'dragend', dragend);
 
     if (track.length > 0) {
         segment = new google.maps.Polyline({
@@ -166,7 +167,7 @@ function add_segment(event) {
             strokeWeight: 3,
             map: map,
             path: [track[track.length - 1].getPosition(), event.latLng],
-//            geodesic: true,
+            geodesic: true,
         });
         segments.push(segment);
     }
@@ -192,9 +193,13 @@ function drag(index) {
             segments[index].setPath([track[index].getPosition(),
                 track[index + 1].getPosition()]);
         }
-        update_all();
+        update_distance();
         return;
     }
+}
+
+function dragend() {
+	update_elevation();
 }
 
 function clear_marker() {
