Update the api key

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 		text-align: right;
 	}
 </style>
-<script type="text/javascript" src='http://maps.googleapis.com/maps/api/js?key=AIzaSyDc3LDO-rPImnz9e4c2KwviMBBRonz9vlk&sensor=false&libraries=drawing,geometry'></script>
+
+<script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyAHhcuzlRdbTqd2wSqg5fxCG-w8WMgv_HA&sensor=false"></script>
 <script type="text/javascript" src='https://www.google.com/jsapi'></script>
 <script type="text/javascript">
 
