Key still doesn't work.  Does this fix it?

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	}
 </style>
 
-<script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyAHhcuzlRdbTqd2wSqg5fxCG-w8WMgv_HA&sensor=false"></script>
+<script type="text/javascript" src="//maps.googleapis.com/maps/api/js?v=3&key=AIzaSyAHhcuzlRdbTqd2wSqg5fxCG-w8WMgv_HA&sensor=false"></script>
 <script type="text/javascript" src='https://www.google.com/jsapi'></script>
 <script type="text/javascript">
 
